--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-__pycache__
-build
-dist
-opt175b
-*.txt
-*.pt
-*egg-info*
-*.out
-facebook/
-data/
+*
+!.gitignore
+!*.py
+!*.cu
+!*.cpp
+!*.sh
+!LICENSE
+!README.md
